2008-12-02  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/38359
	* fold-const.c (fold_binary): Fold -1 >> x to -1 only for
	non-negative x.

2008-12-02  Martin Jambor  <mjambor@suse.cz>

	PR middle-end/37861
        * tree-ssa-forwprop.c (forward_propagate_addr_expr_1): Do not check
        for INDIRECT_REFs.
        (forward_propagate_addr_into_variable_array_index): Check that the
        offset is not computed from a MULT_EXPR, use is_gimple_assign rather
        than the gimple code directly.
        
2008-12-02  Ben Elliston  <bje@au.ibm.com>

	* config/spu/float_disf.c (__floatdisf): Prototype.
	* config/spu/float_unsdisf.c (__float_undisf): Likewise.
	* config/spu/float_unssidf.c (__float_unssidf): Constify cast.
	* config/spu/float_unsdidf.c (__float_unsdidf): Likewise.

2008-12-02  DJ Delorie  <dj@redhat.com>

	* config/stormy16/stormy16.h (INCOMING_FRAME_SP_OFFSET): Negate.
	(DWARF_CIE_DATA_ALIGNMENT): Define.

	* config/stormy16/stormy16.c (xstormy16_compute_stack_layout):
	Invert add/sub for INCOMING_FRAME_SP_OFFSET.
	(xstormy16_expand_prologue): Likewise.
	(xstormy16_expand_builtin_va_start): Likewise.
	(xstormy16_gimplify_va_arg_expr): Likewise.

2008-12-02  Jakub Jelinek  <jakub@redhat.com>

	PR middle-end/38343
	* builtins.c (expand_builtin_mempcpy_args): Handle COMPOUND_EXPRs
	potentially returned from folding memcpy.
	(expand_builtin_stpcpy_args): Similarly for folding strcpy.
	(fold_builtin_2): Handle BUILT_IN_STPCPY if result is ignored.

2008-12-02  Danny Smith  <dannysmith@users.sourceforge.net>

        PR target/38054
	* config/i386/winnt.c (i386_pe_encode_section_info): Condition stdcall
	decoration of function RTL names here on Ada language.

2008-12-01  Vladimir Makarov  <vmakarov@redhat.com>

	PR rtl-optimization/38280
	* ira-build.c (loop_is_inside_p, regno_allocno_order_compare_func,
	ira_rebuild_regno_allocno_list): New functions.
	(regno_allocnos): New static variable.