@@ -1,3 +1,8 @@
+2008-12-02  Jakub Jelinek  <jakub@redhat.com>
+
+	PR middle-end/38343
+	* gcc.c-torture/compile/pr38343-2.c: New test.
+
 2008-12-02  Richard Guenther  <rguenther@suse.de>
 
 	PR tree-optimization/38359
